[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "qcontext"
version = "0.5.0"
description = "One-time initializable static state with statically-checked zero-cost interior mutability"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/qcontext/"

[dependencies]
qcell = { version = "0.5", default-features = false, features = ["exclusion-set"] }
qcontext-derive = { version = "0.5.0", path = "../qcontext-derive" }